objects/SPLinks__c.object
<CustomObject>
    <fields>
        <fullName>SP_URL_1__c</fullName>
        <description>Contains the URL for SP users</description>
        <label>SP URL 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_URL_2__c</fullName>
        <description>Contains the URL for SP users</description>
        <label>SP URL 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_URL_3__c</fullName>
        <description>Contains the URL for SP users</description>
        <label>SP URL 3</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Contains the links for SP users which is referenced in the email</description>
    <label>SPLinks</label>
</CustomObject>